--- a/_posts/2025-06-18-first.md
+++ b/_posts/2025-06-18-first.md
@@ -7,9 +7,9 @@ mathjax: true
 author: Edvin
 ---
 
-\begin{equation}
+\\begin{equation}
 \frac{\partial^2 E_z}{\partial x^2} = j \omega \mu_0 \frac{\partial H_y}{\partial x} = j^2 \omega^2 \mu_0 \epsilon_0E_z = -k_x^2E_z
-\end{equation}
+\\end{equation}
 ![Crepe](/assets/img/testweb.png){: .mx-auto.d-block :}
 \begin{equation}
 x = 3
