--- a/_posts/2025-06-18-first.md
+++ b/_posts/2025-06-18-first.md
@@ -7,6 +7,7 @@ mathjax: true
 author: Edvin
 ---
 
+First:
 \\begin{equation}
 \frac{\partial^2 E_z}{\partial x^2} = j \omega \mu_0 \frac{\partial H_y}{\partial x} = j^2 \omega^2 \mu_0 \epsilon_0E_z = -k_x^2E_z
 \\end{equation}
